feat: Add progess bar

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -66,6 +66,7 @@
 @use '05_components/components.survey-matrix' as components21;
 @use '05_components/components.toc' as components22;
 @use '05_components/components.tooltip' as components23;
+@use '05_components/components.progress' as components24;
 
 // Utilities
 @use '06_utilities/utilities.alignment';
