moved progressbar to bottom

--- a/src/scss/05_components/_components.progress.scss
+++ b/src/scss/05_components/_components.progress.scss
@@ -1,8 +1,8 @@
 .lia-progress {
   position: absolute;
-  height: 0.4rem;
+  height: 0.1rem;
   background: rgb(var(--color-highlight));
-  z-index: 1000;
   overflow: hidden;
   transition: 0.4s linear;
+  bottom: 0px;
 }
