refactor: update SCSS files for improved margin and padding handling
- Added logical properties for margins and paddings.
- Standardized the use of single quotes in SCSS imports.
- Enhanced RTL support by adjusting margins and paddings for various components.
- Cleaned up existing margin and padding utilities for consistency across the stylesheets.

--- a/src/scss/02_generic/_generic.shared.scss
+++ b/src/scss/02_generic/_generic.shared.scss
@@ -1,5 +1,5 @@
-@use "sass:map";
-@use "../00_settings/settings.global";
+@use 'sass:map';
+@use '../00_settings/settings.global';
 
 address,
 h1,
@@ -16,6 +16,7 @@ ol,
 ul,
 fieldset {
   margin-bottom: map.get(settings.$global-spacing, spacing-normal);
+  margin-block-end: map.get(settings.$global-spacing, spacing-normal);
 }
 
 :focus {
