--- a/src/scss/03_elements/_elements.button.scss
+++ b/src/scss/03_elements/_elements.button.scss
@@ -91,6 +91,7 @@ $btn-height: 3.6rem;
 
   > .lia-btn__text {
     margin-left: 1rem;
+    margin-inline-start: 1rem;
     vertical-align: middle;
   }
 
