--- a/src/scss/05_components/_components.quiz.scss
+++ b/src/scss/05_components/_components.quiz.scss
@@ -1,7 +1,8 @@
-@use "../01_tools/tools.breakpoints";
+@use '../01_tools/tools.breakpoints';
 
 .lia-quiz {
   margin-bottom: 2rem;
+  margin-block-end: 2rem;
 
   /* quiz elements */
 
@@ -12,6 +13,7 @@
 
     > *:not(:last-child) {
       margin-bottom: 1rem;
+      margin-block-end: 1rem;
     }
   }
 
@@ -22,6 +24,7 @@
 
     > *:not(:last-child) {
       margin-right: 1rem;
+      margin-inline-end: 1rem;
     }
 
     @include tools.breakpoint('md') {
@@ -52,7 +55,6 @@
     grid-column-start: 1;
   }
 
-
   &__feedback {
     display: flex;
     align-items: center;
@@ -71,6 +73,7 @@
   &-select {
     > *:not(:last-child) {
       margin-bottom: 2rem;
+      margin-block-end: 2rem;
     }
   }
 
@@ -85,11 +88,13 @@
 
     > .lia-quiz__control {
       margin-right: 1rem;
+      margin-inline-end: 1rem;
     }
   }
 
   // make sure that any kind of list has no indenting
   [class^='lia-list'] {
     margin-left: 0;
+    margin-inline-start: 0;
   }
 }
