--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -130,6 +130,7 @@
     height: unset !important;
     overflow: hidden !important;
     margin-top: unset !important;
+    margin-block-start: unset !important;
   }
 
   .lia-code-terminal__output {
