--- a/src/scss/02_generic/_generic.reset.scss
+++ b/src/scss/02_generic/_generic.reset.scss
@@ -37,6 +37,7 @@ li > {
   ol,
   ul {
     margin-bottom: 0;
+    margin-block-end: 0;
   }
 }
 
@@ -82,21 +83,21 @@ span {
 }
 
 /* clears the 'X' from Internet Explorer */
-input[type="search"]::-ms-clear {
+input[type='search']::-ms-clear {
   display: none;
   width: 0;
   height: 0;
 }
-input[type="search"]::-ms-reveal {
+input[type='search']::-ms-reveal {
   display: none;
   width: 0;
   height: 0;
 }
 
 /* clears the 'X' from Chrome */
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration {
+input[type='search']::-webkit-search-decoration,
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-results-button,
+input[type='search']::-webkit-search-results-decoration {
   display: none;
 }
