--- a/src/scss/03_elements/_elements.code.scss
+++ b/src/scss/03_elements/_elements.code.scss
@@ -1,12 +1,14 @@
-@use "../00_settings/settings.global";
+@use '../00_settings/settings.global';
 
 .lia-code {
   font-family: settings.$global-font-mono;
   margin-bottom: 2rem;
+  margin-block-end: 2rem;
 
   &--block {
     > *:not(:last-child) {
       margin-bottom: 1rem;
+      margin-block-end: 1rem;
     }
   }
 
@@ -14,6 +16,7 @@
     border: 1px solid rgb(var(--color-highlight-dark));
     color: rgb(var(--color-highlight-dark));
     margin-bottom: 0;
+    margin-block-end: 0;
     padding: 0 0.5rem;
     word-break: break-word;
   }
@@ -27,6 +30,7 @@
 
     &__action {
       margin-right: auto;
+      margin-inline-end: auto;
     }
 
     &__version {
@@ -35,6 +39,7 @@
 
       > *:not(:last-child) {
         margin-right: 0.5rem;
+        margin-inline-end: 0.5rem;
       }
     }
   }
