--- a/src/scss/05_components/_components.card.scss
+++ b/src/scss/05_components/_components.card.scss
@@ -8,6 +8,7 @@
   position: relative;
   color: rgb(var(--color-text));
   margin-top: 2rem;
+  margin-block-start: 2rem;
 
   &__logo {
     @media (max-width: 240px) {
@@ -33,8 +34,10 @@
 
     @include tools.breakpoint-only('sm', 'md') {
       margin-top: 4rem;
+      margin-block-start: 4rem;
       height: auto;
       padding-top: 0;
+      padding-block-start: 0;
     }
   }
 
@@ -43,8 +46,14 @@
     left: 1rem;
     top: -1rem;
 
+    [dir='rtl'] & {
+      left: auto;
+      right: 1rem;
+    }
+
     > *:not(:last-child) {
       margin-right: 1rem;
+      margin-inline-end: 1rem;
     }
 
     @media (max-width: 360px) {
@@ -95,6 +104,7 @@
 
     > *:not(:last-child) {
       margin-right: 1rem;
+      margin-inline-end: 1rem;
 
       &:hover {
         box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
@@ -103,6 +113,7 @@
 
     > *:last-child {
       margin-left: auto;
+      margin-inline-start: auto;
 
       &:hover {
         box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
@@ -118,6 +129,7 @@
   &__body {
     padding: 0 2.4rem;
     margin-bottom: 1rem;
+    margin-block-end: 1rem;
 
     @media (max-width: 240px) {
       hyphens: auto;
