--- a/src/scss/05_components/_components.pagination.scss
+++ b/src/scss/05_components/_components.pagination.scss
@@ -1,17 +1,20 @@
-@use "../00_settings/settings.global";
-@use "../01_tools/tools.breakpoints";
+@use '../00_settings/settings.global';
+@use '../01_tools/tools.breakpoints';
 
 .lia-pagination {
   display: inline-block;
   width: 100%;
 
-  @include tools.breakpoint("md") {
+  @include tools.breakpoint('md') {
     margin-bottom: 2rem;
+    margin-block-end: 2rem;
     width: auto;
   }
-  @include tools.breakpoint("lg") {
+  @include tools.breakpoint('lg') {
     margin-bottom: 0;
+    margin-block-end: 0;
     margin-right: 2rem;
+    margin-inline-end: 2rem;
     width: auto;
   }
 
@@ -26,7 +29,7 @@
     font-weight: 700;
     justify-content: space-between;
 
-    @include tools.breakpoint("md") {
+    @include tools.breakpoint('md') {
       border-radius: settings.$global-radius;
       width: 15rem;
     }
