--- a/src/scss/05_components/_components.script.scss
+++ b/src/scss/05_components/_components.script.scss
@@ -1,4 +1,4 @@
-@use "../00_settings/settings.global";
+@use '../00_settings/settings.global';
 
 .lia-script {
   border-radius: settings.$global-radius;
@@ -19,10 +19,14 @@
   &__refresh {
     background-color: rgb(var(--lia-grey-light));
     border-bottom: 0;
+    border-block-end: 0;
     border-left: 0;
+    border-inline-start: 0;
     border-radius: 0;
     border-right: 1px solid rgb(var(--color-highlight));
+    border-inline-end: 1px solid rgb(var(--color-highlight));
     border-top: 0;
+    border-block-start: 0;
     color: rgb(var(--lia-anthracite));
   }
 
@@ -33,6 +37,7 @@
 
     &:not(:last-child) {
       margin-right: 1rem;
+      margin-inline-end: 1rem;
     }
   }
 
@@ -70,6 +75,7 @@
     align-items: center;
     background-color: rgb(var(--lia-anthracite));
     border-left: 1px solid rgb(var(--color-highlight));
+    border-inline-start: 1px solid rgb(var(--color-highlight));
     color: rgb(var(--lia-white));
     display: flex;
     padding: 0rem 0.5rem;
@@ -77,6 +83,7 @@
 
     i {
       margin-right: 0.5rem;
+      margin-inline-end: 0.5rem;
     }
   }
 }
