--- a/src/scss/05_components/_components.slide-animation.scss
+++ b/src/scss/05_components/_components.slide-animation.scss
@@ -3,6 +3,9 @@
   padding-left: 5px;
   margin-right: 4px;
   padding-right: 5px;
+  padding-inline: 5px;
+  margin-inline: 4px;
+
   overflow-y: auto;
   transition: max-height 0.2s ease-out;
 }
