--- a/src/scss/03_elements/_elements.list.scss
+++ b/src/scss/03_elements/_elements.list.scss
@@ -1,61 +1,11 @@
 .lia-list {
   &--unordered,
   &--ordered {
-    margin-left: 2rem;
-    margin-inline-start: 2rem;
-    padding-left: 2rem;
     padding-inline-start: 2rem;
-    position: relative;
 
-    ul,
-    ol {
-      margin-left: 0;
-      margin-inline-start: 0;
-    }
-  }
-
-  &--unordered {
-    list-style-type: none;
-
-    > li {
-      &:before {
-        content: '\EA28';
-        color: rgb(var(--color-highlight-dark));
-        font-family: 'icon';
-        left: 0;
-        position: absolute;
-      }
-
-      > p {
-        display: block;
-      }
-    }
-
-    ul li {
-      //padding-left: 1rem;
-      &:before {
-        content: '\EA29';
-      }
-    }
-
-    ul li ul li {
-      //padding-left: 1rem;
-      &:before {
-        content: '\EA2A';
-      }
-    }
-  }
-
-  &--ordered {
-    > li {
-      &::marker {
-        color: rgb(var(--color-highlight-dark));
-      }
-
-      > * {
-        left: 1rem;
-        position: relative;
-      }
+    > li::marker {
+      color: rgb(var(--color-highlight-dark));
+      padding-inline-start: 2rem;
     }
   }
 }
