--- a/src/scss/05_components/_components.support-menu.scss
+++ b/src/scss/05_components/_components.support-menu.scss
@@ -25,11 +25,24 @@
   width: object.$support-width-mobile;
   z-index: 100;
 
+  [dir='rtl'] & {
+    right: auto;
+    left: 0;
+  }
+
   &--closed {
     transform: translateX(100%);
 
+    [dir='rtl'] & {
+      transform: translateX(-100%);
+    }
+
     .lia-support-menu__toggler {
       transform: translate(-6.5rem, -50%);
+
+      [dir='rtl'] & {
+        transform: translate(6.5rem, -50%);
+      }
     }
   }
 
@@ -49,6 +62,10 @@
 
       .lia-support-menu__toggler {
         transform: translate(-6.5rem, -50%);
+
+        [dir='rtl'] & {
+          transform: translate(6.5rem, -50%);
+        }
       }
     }
   }
@@ -69,13 +86,27 @@
         )
     );
 
+    [dir='rtl'] & {
+      left: auto;
+      right: 0;
+      transform: translate(6.5rem, -50%);
+    }
+
     @include tools.breakpoint('sm', 'max') {
       transform: translate(2.1rem, -50%);
+
+      [dir='rtl'] & {
+        transform: translate(-2.1rem, -50%);
+      }
     }
 
     @include tools.breakpoint('md', 'max') {
       &--closed {
         transform: translateX(100%);
+
+        [dir='rtl'] & {
+          transform: translateX(-100%);
+        }
       }
     }
 
