--- a/src/scss/03_elements/_elements.list.scss
+++ b/src/scss/03_elements/_elements.list.scss
@@ -12,33 +12,42 @@
   }
 
   &--unordered {
-    list-style-type: none;
+    list-style-type: disc;
 
     > li {
-      &:before {
-        content: '\EA28';
+      &::marker {
         color: rgb(var(--color-highlight-dark));
-        font-family: 'icon';
-        left: 0;
-        position: absolute;
       }
-
       > p {
         display: block;
       }
     }
 
     ul li {
-      //padding-left: 1rem;
-      &:before {
-        content: '\EA29';
+      &::marker {
+        color: rgb(var(--color-highlight-dark));
       }
+      list-style-type: circle;
     }
 
     ul li ul li {
+      &::marker {
+        color: rgb(var(--color-highlight-dark));
+      }
+      list-style-type: square;
+    }
+
+    ul li ul li ul li {
       //padding-left: 1rem;
+      list-style-type: none;
+      position: relative;
+
       &:before {
-        content: '\EA2A';
+        content: '–'; // Em dash
+        color: rgb(var(--color-highlight-dark));
+        position: absolute;
+        left: -1em;
+        font-weight: bold;
       }
     }
   }
