improve(CSS): better highlight active site in toc

--- a/src/scss/05_components/_components.toc.scss
+++ b/src/scss/05_components/_components.toc.scss
@@ -121,6 +121,7 @@
 
         &:before {
           content: '';
+          background-color: rgb(var(--color-highlight));
           position: absolute;
           left: 0;
           top: 0px;
